updating tech stach service