@@ -2,9 +2,9 @@ package com.qentelli.employeetrackingsystem.serviceImpl;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+
 import com.qentelli.employeetrackingsystem.entity.TechStack;
 
 @Service
@@ -12,8 +12,8 @@ public class TechStackService {
 
 	public List<String> getAllTechStacks() {
         return Arrays.stream(TechStack.values())
-                     .map(Enum::name) // Converts enum to its name as String
-                     .collect(Collectors.toList());
+        		.map(stack->stack.getDisplayName().toUpperCase())
+                .toList();
     }
 
 }
